# AnimeRecommendation

./: .Rhistory  .gitignore  Data checking.R  DataImport.py  Display.py  ExceptionsList.py  FeatureEncoding.py  Main.py  ModelSelection.ipynb  README.md  RecommendationGeneration.py  SimilarityScores.py  environment.yml  main.py  pyproject.toml  requirements.txt  test.py  webpage.py
AnimeRecommendation/: README.md  webpage.py
AnimeRecommendation/ImportData/: api_Url.py  recommendationsOriginal.csv
AnimeRecommendation/PredictionCreation/: ModelBuilding.py
AnimeRecommendation/static/js/: dropdown.js
ImportData/: DataImport.py  ErrorFile.txt  animesOld.csv  moviesIDs.csv  recommendations.csv  recommendationsAltered.csv
PredictionCreation/: FeatureEncoding.py  ModelBuilding.py
templates/: recommendation_index.html
