[project]
name = "AnimeRecommendation"
version = "1.0.0"
description = "Website to recommend users the anime they should watch next based on previous interest."
dependencies = [
    "flask",
    "requests",
    "numpy",
    "pandas",
    "scikit-learn",
    "waitress"
]

[build-system]
requires = ["flit-core<4"]
build-backend = "flit_core.buildapi"